; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_handle_mouse_up.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_w32_common.c_handle_mouse_up.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vo_w32_state = type { i32 }

@MP_KEY_STATE_UP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vo_w32_state*, i32)* @handle_mouse_up to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @handle_mouse_up(%struct.vo_w32_state* %0, i32 %1) #0 {
  %3 = alloca %struct.vo_w32_state*, align 8
  %4 = alloca i32, align 4
  store %struct.vo_w32_state* %0, %struct.vo_w32_state** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.vo_w32_state*, %struct.vo_w32_state** %3, align 8
  %6 = call i32 @mod_state(%struct.vo_w32_state* %5)
  %7 = load i32, i32* %4, align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* %4, align 4
  %9 = load %struct.vo_w32_state*, %struct.vo_w32_state** %3, align 8
  %10 = getelementptr inbounds %struct.vo_w32_state, %struct.vo_w32_state* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %4, align 4
  %13 = load i32, i32* @MP_KEY_STATE_UP, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @mp_input_put_key(i32 %11, i32 %14)
  %16 = call i32 (...) @ReleaseCapture()
  ret void
}

declare dso_local i32 @mod_state(%struct.vo_w32_state*) #1

declare dso_local i32 @mp_input_put_key(i32, i32) #1

declare dso_local i32 @ReleaseCapture(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
